; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/task/extr_task.c_task_init_handler.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/task/extr_task.c_task_init_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TASK_PRIORITY_HIGH = common dso_local global i64 0, align 8
@task_Q = common dso_local global i32** null, align 8
@task_dispatch = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @task_init_handler(i64 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @TASK_PRIORITY_HIGH, align 8
  %8 = icmp ule i64 %6, %7
  br i1 %8, label %9, label %47

9:                                                ; preds = %2
  %10 = load i32**, i32*** @task_Q, align 8
  %11 = load i64, i64* %4, align 8
  %12 = getelementptr inbounds i32*, i32** %10, i64 %11
  %13 = load i32*, i32** %12, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %47

15:                                               ; preds = %9
  %16 = load i64, i64* %5, align 8
  %17 = mul i64 4, %16
  %18 = trunc i64 %17 to i32
  %19 = call i64 @os_malloc(i32 %18)
  %20 = inttoptr i64 %19 to i32*
  %21 = load i32**, i32*** @task_Q, align 8
  %22 = load i64, i64* %4, align 8
  %23 = getelementptr inbounds i32*, i32** %21, i64 %22
  store i32* %20, i32** %23, align 8
  %24 = load i32**, i32*** @task_Q, align 8
  %25 = load i64, i64* %4, align 8
  %26 = getelementptr inbounds i32*, i32** %24, i64 %25
  %27 = load i32*, i32** %26, align 8
  %28 = load i64, i64* %5, align 8
  %29 = mul i64 4, %28
  %30 = trunc i64 %29 to i32
  %31 = call i32 @os_memset(i32* %27, i32 0, i32 %30)
  %32 = load i32**, i32*** @task_Q, align 8
  %33 = load i64, i64* %4, align 8
  %34 = getelementptr inbounds i32*, i32** %32, i64 %33
  %35 = load i32*, i32** %34, align 8
  %36 = icmp ne i32* %35, null
  br i1 %36, label %37, label %46

37:                                               ; preds = %15
  %38 = load i32, i32* @task_dispatch, align 4
  %39 = load i64, i64* %4, align 8
  %40 = load i32**, i32*** @task_Q, align 8
  %41 = load i64, i64* %4, align 8
  %42 = getelementptr inbounds i32*, i32** %40, i64 %41
  %43 = load i32*, i32** %42, align 8
  %44 = load i64, i64* %5, align 8
  %45 = call i32 @system_os_task(i32 %38, i64 %39, i32* %43, i64 %44)
  store i32 %45, i32* %3, align 4
  br label %48

46:                                               ; preds = %15
  br label %47

47:                                               ; preds = %46, %9, %2
  store i32 0, i32* %3, align 4
  br label %48

48:                                               ; preds = %47, %37
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local i64 @os_malloc(i32) #1

declare dso_local i32 @os_memset(i32*, i32, i32) #1

declare dso_local i32 @system_os_task(i32, i64, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
